syntax = "proto3";

package conway;

import "utility/vector2.proto";

// encoded as a flattened 2d array, a[i][j] = flattened[i*cols + j]
message LifeGrid {
  conway.Vector2 dimensions = 1;
  repeated bool flat_grid = 2;
}